2.1.0
---------

Major Changes:
- Added support for LVM, MDADM, and Normal Booting 
  * In case you don't really need an initramfs but still would like to have one.

2.0.5
---------

Major Changes:
- The initramfs will now always copy it's zpool.cache to the rootfs. This prevents the rootfs
  from becoming out of sync with the stuff that the initramfs was working with.
- 'su' - single user mode performs a complete chroot with functional /dev, /proc, /sys

Minor Changes:
- Fixed a bug where the initramfs would only get bz2 compressed man pages.
- Worked a bit more on the tty job control stuff.
- Added checks to make sure that if the initramfs cannot find any module dependencies, then it will fail.
- Removed customized /etc/bash/bashrc and now setting hostname directly with 'hostname' command.

2.0.4
---------

Major Changes:
- Added support to include your /etc/modprobe.d/zfs.conf file so that your zfs modules are
  loaded with your desired options.

Minor Changes:
- Useless "INIT" variable removed.

2.0.3
---------

Major Changes:
- Fixed bug where the initrd kept failing because it couldn't export (a non existing) pool.

2.0.2
---------

Major Changes:
- Relicensed back to MPLv2
- Removed ability to have zpool.cache inside the initramfs (Too many problems)

Minor Changes:
- UI changes were made. Spacing and some rewording

2.0.1
---------

Major Changes:
- Relicensed to the GPLv2 (Only the GPLv2, not v1, not v3, not v39232, only GPLv2)

Minor Changes:
- Made instructions more clearer in the USAGE file

2.0.0
---------

Major Changes:
- Completely rewrote the code so that it's cleaner and smaller
- Removed "Slax Bundle" creation option. This application will strictly be for creating
  an initramfs.

Minor Changes:
- Code is now using bash style if statements ([[ ]])

1.8.8
---------

Major Changes:
- Busybox 1.21.1 static binary now included.
- 'reboot -f' and 'poweroff -f' commands now work within the initramfs.